added meta tags to public index html

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,6 +5,12 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
+        <meta property="og:url" content="https://depthchart.herokuapp.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="DepthChart" />
+        <meta property="og:description" content="Organize and dominate your fantasy football league" />
+        <meta property="og:image"
+            content="https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/DepthChart_splash_page.png" />
         <title>DepthChart</title>
     </head>
 
